parser/tests/snapshots/cfg_snapshots__nested if statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n        if true {\n          let a = 1\n          if true {\n            let a = 1\n          }\n          let b = 1 \n        }\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BranchCondition" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BranchCondition" ]
    5 [ label = "BasicBlock(1)" ]
    6 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue" ]
    3 -> 4 [ label = "Normal" ]
    4 -> 5 [ label = "ConditionTrue" ]
    4 -> 6 [ label = "ConditionFalse" ]
    5 -> 6 [ label = "Normal" ]
    6 -> 1 [ label = "Normal" ]
    2 -> 1 [ label = "ConditionFalse" ]
}

