parser/tests/snapshots/cfg_snapshots__single if statement, multiple leading statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      let a = 1\n      let b = 1\n      let c = 1\n      if true {\n        let d = 1\n      }\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(3)" ]
    3 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    3 -> 1 [ label = "Normal" ]
    2 -> 1 [ label = "ConditionFalse(2)" ]
}

