parser/tests/snapshots/cfg_snapshots__single if statement.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      if true {\n        let x = 1\n      }\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    3 -> 1 [ label = "Normal" ]
    2 -> 1 [ label = "ConditionFalse(2)" ]
}

