parser/tests/snapshots/cfg_snapshots__single statement, no control flow.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      let a = 1\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 1 [ label = "Normal" ]
}

